archive/reinvent2017/workshop3/create-eks-cluster.yaml
Description: >
    Starting template for Interstella 4-part workshop series.  
    Last Modified: Nov 25, 2017

Parameters:

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names. Restriction - Lower case with minimal special characters. 
        Type: String
        MinLength: 2
        AllowedPattern: (?:[a-z0-9]+(?:[._-][a-z0-9]+)*/)*[a-z0-9]+(?:[._-][a-z0-9]+)*

    KeyPairName:
        Description: Name of an existing EC2 KeyPair to enable SSH access to the EC2 instances. If no dropdown appears, please create a new keypair. 
        Type: AWS::EC2::KeyPair::KeyName
        MinLength: 1

    VpcCIDR: 
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String
        Default: 10.177.0.0/16

    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
        Type: String
        Default: 10.177.10.0/24

    PublicSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
        Type: String
        Default: 10.177.11.0/24

    PrivateSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
        Type: String
        Default: 10.177.20.0/24

    PrivateSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
        Type: String
        Default: 10.177.21.0/24

    InstanceType: 
        Description: Choose an instance type for ECS Cluster Instances - default is t2.micro
        Type: String
        Default: t2.micro
        AllowedValues:
            - t2.micro
            - t2.small
            - t2.medium
            - t2.large
            - c4.large
            - m4.large

    ClusterSize:
        Description: How many ECS hosts do you want to initially deploy?
        Type: Number
        Default: 2

    InterstellaApiKey:
        Description: Enter the API key used by the logistics software to fulfill orders. See lab instructions for help. This key is obtained here - http://www.interstella.trade/getkey.html  
        Type: String
        MinLength: 1
    
    InterstellaFulfillmentAPIURL:
        Description: Enter the URL where your application will be fulfilling the orders
        Type: String
        MinLength: 1
        Default: https://orders.interstella.trade/receiving/
    
    InterstellaOrdersTopicArn: 
        Description: Logistics software will subscribe to this SNS topic to receive orders
        Type: String
        Default: arn:aws:sns:us-west-2:270206935686:orderTopic
        MinLength: 1
    
    InterstellaIridiumOrdersTopicArn: 
        Description: Logistics software will subscribe to this SNS topic to receive iridium orders
        Type: String
        Default: arn:aws:sns:us-west-2:270206935686:iridium
        MinLength: 1

Resources:

    VPC: 
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            Tags: 
                - Key: Name 
                  Value: !Ref EnvironmentName
            
    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName
            
    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs ]
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

    PublicSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs ]
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

    PrivateSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

    NatGateway1EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties: 
            Domain: vpc

    NatGateway2EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway1: 
        Type: AWS::EC2::NatGateway
        Properties: 
            AllocationId: !GetAtt NatGateway1EIP.AllocationId
            SubnetId: !Ref PublicSubnet1

    NatGateway2: 
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway2EIP.AllocationId
            SubnetId: !Ref PublicSubnet2

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Routes

    DefaultPublicRoute: 
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2

    ECSHostSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties: 
            VpcId: !Ref VPC
            GroupDescription: Access to the ECS hosts and the tasks/containers that run on them
            SecurityGroupIngress:
                # Allow inbound access to ECS hosts from the ELB - this will be used in later workshops
                - SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup 
                  IpProtocol: -1
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 5000
                  ToPort: 5000
                  CidrIp: 0.0.0.0/0
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName}-ECS-Hosts

    # This security group defines who/where is allowed to access the Application Load Balancer.
    # By default, we've opened this up to the public internet (0.0.0.0/0) but can you restrict
    # it further if you want.
    LoadBalancerSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties: 
            VpcId: !Ref VPC
            GroupDescription: Access to the load balancer that sits in front of ECS
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  IpProtocol: -1
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName}-LoadBalancers
            
    ECSCluster:
        Type: AWS::ECS::Cluster
        Properties:
            ClusterName: !Ref EnvironmentName

    ECRMonolithRepository:
        Type: AWS::ECR::Repository
        Properties: 
            RepositoryName: !Sub ${EnvironmentName}-monolith

    ECRIridiumRepository:
        Type: AWS::ECR::Repository
        Properties: 
            RepositoryName: !Sub ${EnvironmentName}-iridium

    ECSAutoScalingGroup:
        Type: AWS::AutoScaling::AutoScalingGroup
        Properties: 
            VPCZoneIdentifier: 
                - !Ref PublicSubnet1
                - !Ref PublicSubnet2
            LaunchConfigurationName: !Ref ECSLaunchConfiguration
            MinSize: !Ref ClusterSize
            MaxSize: !Ref ClusterSize
            DesiredCapacity: !Ref ClusterSize
            TargetGroupARNs: 
                - !Ref MonolithTargetGroup
                - !Ref IridiumTargetGroup
            Tags: 
                - Key: Name
                  Value: !Sub ${EnvironmentName} ECS host
                  PropagateAtLaunch: true
        DependsOn: [PublicSubnet1, PublicSubnet2]
        
        CreationPolicy:
            ResourceSignal: 
                Timeout: PT15M
        UpdatePolicy:
            AutoScalingRollingUpdate:
                MinInstancesInService: 1
                MaxBatchSize: 1
                PauseTime: PT15M
                SuspendProcesses:
                  - HealthCheck
                  - ReplaceUnhealthy
                  - AZRebalance
                  - AlarmNotification
                  - ScheduledActions
                WaitOnResourceSignals: true
        
    ECSLaunchConfiguration:
        Type: AWS::AutoScaling::LaunchConfiguration
        Properties:
            ImageId:  !FindInMap [AWSRegionToAMI, !Ref "AWS::Region", AMI]
            InstanceType: !Ref InstanceType
            KeyName: !Ref KeyPairName
            SecurityGroups: 
                - !Ref ECSHostSecurityGroup
            IamInstanceProfile: !Ref ECSInstanceProfile
            UserData: 
                "Fn::Base64": !Sub |
                    #!/bin/bash
                    yum -y --security update
                    yum -y install aws-cli git
                    su - ec2-user -c "aws configure set default.region ${AWS::Region}"
                    mkdir /home/ec2-user/.docker
                    cat << EOF > /home/ec2-user/.docker/config.json
                    {
                    "credsStore": "ecr-login"
                    }
                    EOF
                    chown -R ec2-user. /home/ec2-user/.docker
                    git clone https://github.com/awslabs/amazon-ecr-credential-helper.git
                    cd amazon-ecr-credential-helper && make docker && cp bin/local/docker-credential-ecr-login /usr/local/bin/
                    yum install -y aws-cfn-bootstrap
                    /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSLaunchConfiguration
                    /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSAutoScalingGroup
        DependsOn: ECSHostSecurityGroup
        Metadata:
            AWS::CloudFormation::Init:
                config:
                    commands:
                        01_add_instance_to_cluster:
                            command: !Sub echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
                    files:
                        "/etc/cfn/cfn-hup.conf":
                            mode: 000400
                            owner: root
                            group: root
                            content: !Sub |
                                [main]
                                stack=${AWS::StackId}
                                region=${AWS::Region}
                        
                        "/etc/cfn/hooks.d/cfn-auto-reloader.conf":
                            content: !Sub |
                                [cfn-auto-reloader-hook]
                                triggers=post.update
                                path=Resources.ECSLaunchConfiguration.Metadata.AWS::CloudFormation::Init
                                action=/opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSLaunchConfiguration
                    services: 
                        sysvinit:
                            cfn-hup: 
                                enabled: true
                                ensureRunning: true
                                files: 
                                    - /etc/cfn/cfn-hup.conf
                                    - /etc/cfn/hooks.d/cfn-auto-reloader.conf

    # This IAM Role is attached to all of the ECS hosts. It is based on the default role
    # published here:
    # http://docs.aws.amazon.com/AmazonECS/latest/developerguide/instance_IAM_role.html
    #
    # You can add other IAM policy statements here to allow access from your ECS hosts
    # to other AWS services. Please note that this role will be used by ALL containers
    # running on the ECS host.

    ECSRole:
        Type: AWS::IAM::Role
        Properties: 
            Path: /
            RoleName: !Sub ${EnvironmentName}-ECSRole-${AWS::Region}
            AssumeRolePolicyDocument: |
                {
                    "Statement": [{
                        "Action": "sts:AssumeRole",
                        "Effect": "Allow",
                        "Principal": { 
                            "Service": "ec2.amazonaws.com" 
                        }
                    }]
                }
            Policies: 
                - PolicyName: ecs-service
                  PolicyDocument: 
                    Statement:
                      -
                        Effect: "Allow"
                        Action: 
                            - "s3:Get*"
                            - "s3:List*"
                            - "ecs:CreateCluster"
                            - "ecs:DeregisterContainerInstance"
                            - "ecs:DiscoverPollEndpoint"
                            - "ecs:Poll"
                            - "ecs:RegisterContainerInstance"
                            - "ecs:StartTelemetrySession"
                            - "ecs:Submit*"
                            - "logs:CreateLogStream"
                            - "logs:PutLogEvents"
                            - "ecr:GetAuthorizationToken"
                            - "ecr:BatchCheckLayerAvailability"
                            - "ecr:GetDownloadUrlForLayer"
                            - "ecr:GetRepositoryPolicy"
                            - "ecr:DescribeRepositories"
                            - "ecr:ListImages"
                            - "ecr:DescribeImages"
                            - "ecr:BatchGetImage"
                            - "ecr:InitiateLayerUpload"
                            - "ecr:UploadLayerPart"
                            - "ecr:CompleteLayerUpload"
                            - "ecr:PutImage"
                            - "sns:Subscribe"
                        Resource: "*"
                      -
                        Effect: "Allow"
                        Action: 
                            - "ssm:DescribeParameters"
                            - "ssm:GetParameters"
                            - "ssm:GetParameter"
                        Resource: 
                          -  
                            Fn::Join:
                              - ""
                              -
                                - "arn:aws:ssm:"
                                -
                                  Ref: "AWS::Region"
                                - ":"
                                -
                                  Ref: "AWS::AccountId"
                                - ":parameter/interstella*"
                          - 
                            Fn::Join:
                              - ""
                              -
                                - "arn:aws:ssm:"
                                -
                                  Ref: "AWS::Region"
                                - ":"
                                -
                                  Ref: "AWS::AccountId"
                                - ":parameter/microservice*"
    ECSServiceRole:
      Type: AWS::IAM::Role
      Properties:
        Path: /
        RoleName: !Sub ${EnvironmentName}-ECSServiceRole
        AssumeRolePolicyDocument: |
          {
              "Statement": [{
                  "Effect": "Allow",
                  "Principal": { "Service": [ "ecs.amazonaws.com" ]},
                  "Action": [ "sts:AssumeRole" ]
              }]
          }
        ManagedPolicyArns:
          - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceRole
                                
    ECSInstanceProfile: 
        Type: AWS::IAM::InstanceProfile
        Properties:
            Path: /
            Roles: 
                - !Ref ECSRole
                
    CloudWatchLogsGroup:
        Type: AWS::Logs::LogGroup
        Properties:
            LogGroupName: !Sub ${EnvironmentName}-LogGroup
            RetentionInDays: 7
      
    InterstellaApiKeyParam:
        Type: AWS::SSM::Parameter
        Properties:
            Name: /interstella/apiKey
            Description: API key to authorize order fulfillment
            Type: String
            Value: !Ref InterstellaApiKey 
    
    InterstellaHttpEndpointParam:
        Type: AWS::SSM::Parameter
        Properties:
            Name: /interstella/apiEndpoint
            Description: API endpoint for sending order fulfillment
            Type: String
            Value: !Ref InterstellaFulfillmentAPIURL

    InterstellaOrderTopicParam:
        Type: AWS::SSM::Parameter
        Properties:
            Name: /interstella/orderTopic
            Description: SNS topic for receiving orders
            Type: String
            Value: !Ref InterstellaOrdersTopicArn
    
    IridiumSubscriptionArn:
        Type: AWS::SSM::Parameter
        Properties:
            Name: /interstella/iridiumSubscriptionArn
            Description: SNS topic for receiving orders for Iridium
            Type: String
            Value: !Ref InterstellaIridiumOrdersTopicArn
    
    InternalFulfillmentEndpoint:
        Type: AWS::SSM::Parameter
        Properties:
            Name: /interstella/fulfillmentEndpoint
            Description: Internal fulfillment endpoint
            Type: String
            Value: !GetAtt LoadBalancer.DNSName
    
    IridiumTargetGroupArn:
        Type: AWS::SSM::Parameter
        Properties:
            Name: /interstella/iridiumTargetGroupArn
            Description: Target group behind ALB for Iridium microservice
            Type: String
            Value: !Ref IridiumTargetGroup
    
    CloudWatchLogsGroupParam:
        Type: AWS::SSM::Parameter
        Properties:
            Name: /interstella/cloudWatchLogsGroup
            Description: Name of the CloudWatchLogs Log Group 
            Type: String
            Value: !Ref CloudWatchLogsGroup
    
    ECSClusterNameParam:
        Type: AWS::SSM::Parameter
        Properties:
            Name: /interstella/ecsClusterName
            Description: Name of the ECS Cluster
            Type: String
            Value: !Ref ECSCluster
                
    LoadBalancer:
      Type: AWS::ElasticLoadBalancingV2::LoadBalancer
      Properties:
        Subnets: 
          - !Ref PublicSubnet1
          - !Ref PublicSubnet2
        SecurityGroups:
          - !Ref LoadBalancerSecurityGroup
        Name: !Sub ${EnvironmentName}-LoadBalancer

    LoadBalancerListener:
      Type: AWS::ElasticLoadBalancingV2::Listener
      Properties:
        LoadBalancerArn: !Ref LoadBalancer
        Port: 80
        Protocol: HTTP
        DefaultActions:
          - Type: forward
            TargetGroupArn: !Ref MonolithTargetGroup

    MonolithTargetGroup:
      Type: AWS::ElasticLoadBalancingV2::TargetGroup
      DependsOn: LoadBalancer
      Properties:
        VpcId: !Ref VPC
        Port: 80
        Protocol: HTTP
        Matcher:
          HttpCode: 200-299
        HealthCheckIntervalSeconds: 10
        HealthCheckPath: /
        HealthCheckProtocol: HTTP
        HealthCheckTimeoutSeconds: 5
        HealthyThresholdCount: 2
        TargetGroupAttributes:
          - Key: deregistration_delay.timeout_seconds
            Value: 30
        Name: !Sub ${EnvironmentName}-monolith-tg
            
    IridiumTargetGroup:
      Type: AWS::ElasticLoadBalancingV2::TargetGroup
      DependsOn: LoadBalancer
      Properties:
        VpcId: !Ref VPC
        Port: 80
        Protocol: HTTP
        Matcher:
          HttpCode: 200-299
        HealthCheckIntervalSeconds: 10
        HealthCheckPath: /iridium/
        HealthCheckProtocol: HTTP
        HealthCheckTimeoutSeconds: 5
        HealthyThresholdCount: 2
        TargetGroupAttributes:
          - Key: deregistration_delay.timeout_seconds
            Value: 30
        Name: !Sub ${EnvironmentName}-iridium-tg

    ListenerRule:
      Type: AWS::ElasticLoadBalancingV2::ListenerRule
      Properties:
        ListenerArn: !Ref LoadBalancerListener
        Priority: 1
        Conditions:
          - Field: path-pattern
            Values:
              - /
        Actions:
          - TargetGroupArn: !Ref MonolithTargetGroup
            Type: forward
    
    IridiumListenerRule:
      Type: AWS::ElasticLoadBalancingV2::ListenerRule
      Properties:
        ListenerArn: !Ref LoadBalancerListener
        Priority: 10
        Conditions:
          - Field: path-pattern
            Values:
              - /iridium/*
        Actions:
          - TargetGroupArn: !Ref IridiumTargetGroup
            Type: forward
            
    CodeCommitIridiumRepo:
      Type: "AWS::CodeCommit::Repository"
      Properties: 
        RepositoryDescription: This is a git repo for the ECS CI/CD Workshop.
        RepositoryName: !Sub ${EnvironmentName}-iridium-repo
    
    SecuritySNSTopic:
      Type: "AWS::SNS::Topic"
      Properties: 
        TopicName: !Ref EnvironmentName
    
    ArtifactBucket:
      Type: AWS::S3::Bucket
      DeletionPolicy: Delete
      
    CFNNagCodeBuildProject:
      Type: AWS::CodeBuild::Project
      Properties:
        Artifacts:
          Type: "CODEPIPELINE"
        Source:
          Type: "CODEPIPELINE"
          BuildSpec: "cfn-nag-buildspec.yml"
        Environment:
          ComputeType: "BUILD_GENERAL1_SMALL"
          Image: "aws/codebuild/ruby:2.3.1"
          Type: "LINUX_CONTAINER"
        Name: !Sub ${EnvironmentName}-CFNNagCodeBuild-project
        ServiceRole: !Ref CodeBuildServiceRole
        
    GenericCodeBuildProject:
      Type: AWS::CodeBuild::Project
      Properties:
        Artifacts:
          Type: "CODEPIPELINE"
        Source:
          Type: "CODEPIPELINE"
          BuildSpec: "accesskeys-buildspec.yml"
        Environment:
          ComputeType: "BUILD_GENERAL1_SMALL"
          Image: "aws/codebuild/ubuntu-base:14.04"
          Type: "LINUX_CONTAINER"
        Name: !Sub ${EnvironmentName}-GeneralCodeBuild-project
        ServiceRole: !Ref CodeBuildServiceRole
    
    CodeBuildServiceRole:
      Type: AWS::IAM::Role
      Properties:
        RoleName: !Sub ${EnvironmentName}-CodeBuildServiceRole
        Path: /
        AssumeRolePolicyDocument: |
          {
              "Statement": [{
                  "Effect": "Allow",
                  "Principal": { "Service": [ "codebuild.amazonaws.com" ]},
                  "Action": [ "sts:AssumeRole" ]
              }]
          }
        Policies:
          - PolicyName: root
            PolicyDocument:
              Version: 2012-10-17
              Statement:
                - Resource: "*"
                  Effect: Allow
                  Action:
                    - logs:CreateLogGroup
                    - logs:CreateLogStream
                    - logs:PutLogEvents
                    - ecr:GetAuthorizationToken
                - Resource: !Sub arn:aws:s3:::${ArtifactBucket}/*
                  Effect: Allow
                  Action:
                    - s3:GetObject
                    - s3:PutObject
                    - s3:GetObjectVersion
                - Resource: !Sub arn:aws:ecr:${AWS::Region}:${AWS::AccountId}:repository/${ECRIridiumRepository}
                  Effect: Allow
                  Action:
                    - ecr:GetDownloadUrlForLayer
                    - ecr:BatchGetImage
                    - ecr:BatchCheckLayerAvailability
                    - ecr:PutImage
                    - ecr:InitiateLayerUpload
                    - ecr:UploadLayerPart
                    - ecr:CompleteLayerUpload
                - Resource: 
                    - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/${CloudWatchLogsGroup}/codebuild/tests/
                    - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/${CloudWatchLogsGroup}/codebuild/tests:*
                  Effect: Allow
                  Action: 
                    - logs:CreateLogGroup
                    - logs:CreateLogStream
                    - logs:PutLogEvent
                - Resource:
                    - !Sub arn:aws:s3:::codepipeline-${AWS::Region}-*
                  Effect: Allow
                  Action: 
                    - s3:PutObject
                    - s3:GetObject
                    - s3:GetObjectVersion
    
    CodePipelineServiceRole:
      Type: AWS::IAM::Role
      Properties:
        RoleName: !Sub ${EnvironmentName}-CodePipelineServiceRole
        Path: /
        AssumeRolePolicyDocument: 
          Version: "2012-10-17"
          Statement: 
            - 
              Effect: "Allow"
              Principal: 
                Service: 
                  - "codepipeline.amazonaws.com"
              Action: 
                - "sts:AssumeRole"
        Policies:
          - PolicyName: root
            PolicyDocument:
              Version: 2012-10-17
              Statement:
                - Resource: "*"
                  Effect: Allow
                  Action:
                    - s3:GetObject
                    - s3:GetObjectVersion
                    - s3:GetBucketVersioning
                - Resource: "arn:aws:s3:::codepipeline*"
                  Effect: Allow
                  Action:
                    - s3:PutObject
                - Resource: "*"
                  Effect: Allow
                  Action:
                    - codebuild:StartBuild
                    - codebuild:BatchGetBuilds
                    - iam:PassRole
                    - iam:CreateRole
                    - iam:DetachRolePolicy
                    - iam:AttachRolePolicy
                    - iam:DeleteRole
                    - iam:PassRole
                    - iam:DeleteRolePolicy
                    - iam:PutRolePolicy
                    - ecs:RegisterTaskDefinition
                    - ecs:DeregisterTaskDefinition
                    - ecs:CreateService
                    - ecs:UpdateService
                    - ecs:UpdateService
                    - ecs:DescribeServices
                    - ecs:DeleteService
                - Resource: "*"
                  Effect: Allow
                  Action:
                    - ec2:*
                    - elasticloadbalancing:*
                    - autoscaling:*
                    - cloudwatch:*
                    - s3:*
                    - sns:*
                    - cloudformation:*
                - Resource: "*"
                  Effect: Allow
                  Action:
                    - codecommit:CancelUploadArchive
                    - codecommit:GetBranch
                    - codecommit:GetCommit
                    - codecommit:GetUploadArchiveStatus
                    - codecommit:UploadArchive
        
    CFServiceRole:
      Type: AWS::IAM::Role
      Properties:
        RoleName: !Sub ${EnvironmentName}-CFServiceRole
        Path: /
        AssumeRolePolicyDocument: 
          Version: "2012-10-17"
          Statement: 
            - 
              Effect: "Allow"
              Principal: 
                Service: 
                  - "cloudformation.amazonaws.com"
              Action: 
                - "sts:AssumeRole"
        Policies:
          - PolicyName: root
            PolicyDocument:
              Version: 2012-10-17
              Statement:
                - Resource: "*"
                  Effect: Allow
                  Action:
                    - iam:PassRole
                    - iam:CreateRole
                    - iam:DetachRolePolicy
                    - iam:AttachRolePolicy
                    - iam:DeleteRole
                    - iam:PassRole
                    - iam:DeleteRolePolicy
                    - iam:PutRolePolicy
                    - ecs:RegisterTaskDefinition
                    - ecs:DeregisterTaskDefinition
                    - ecs:CreateService
                    - ecs:UpdateService
                    - ecs:UpdateService
                    - ecs:DescribeServices
                    - ecs:DeleteService
                    - lambda:*
                    - s3:GetObject
                    - cloudformation:CreateStack
                    - cloudformation:UpdateStack
                    - cloudformation:SetStackPolicy
                    - cloudformation:CreateChangeSet
               
Outputs:

    VPC: 
        Description: A reference to the created VPC
        Value: !Ref VPC

    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]

    PrivateSubnets:
        Description: A list of the private subnets
        Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]

    PublicSubnet1:
        Description: A reference to the public subnet in the 1st Availability Zone
        Value: !Ref PublicSubnet1

    PublicSubnet2: 
        Description: A reference to the public subnet in the 2nd Availability Zone
        Value: !Ref PublicSubnet2

    PrivateSubnet1:
        Description: A reference to the private subnet in the 1st Availability Zone
        Value: !Ref PrivateSubnet1

    PrivateSubnet2: 
        Description: A reference to the private subnet in the 2nd Availability Zone
        Value: !Ref PrivateSubnet2

    ECSHostSecurityGroup: 
        Description: A reference to the security group for ECS hosts
        Value: !Ref ECSHostSecurityGroup

    LoadBalancerSecurityGroup:
        Description: A reference to the security group for load balancers
        Value: !Ref LoadBalancerSecurityGroup

    Cluster:
        Description: A reference to the ECS cluster
        Value: !Ref ECSCluster

    CloudWatchLogsGroup:
        Description: A reference to the CloudWatch Logs LogGroup
        Value: !Ref CloudWatchLogsGroup
        
    IridiumTargetGroup:
        Description: Target Group ARN for Iridium
        Value: !Ref IridiumTargetGroup
        
    LoadBalancerDNSName:
        Description: DNS Name for ALB
        Value: !GetAtt LoadBalancer.DNSName
